# master-thesis

./: .gitignore  frontend-screen  server-screen  start_server_frontend.sh
prototype-frontend/: package-lock.json  package.json
prototype-frontend/public/: index.html  manifest.json
prototype-frontend/src/: App.tsx  index.tsx  setupProxy.js
prototype-frontend/src/components/: Action.tsx  AllGraphs.tsx  ConfigurationInput.tsx  Navigation.tsx  SingleGraph.tsx
prototype-frontend/src/dev/: previews.tsx  useInitial.ts
prototype-frontend/src/pages/: Configuration.tsx  Dashboard.tsx  Home.tsx
prototype-server/: api.py  config.json  database.py  external.py  main.py  notifications.py  pyproject.toml  test.py
prototype-system/: configuration.json  constants.py  main.py  pyproject.toml
prototype-system/database/: database.py
prototype-system/definitions/: definitions.py
prototype-system/definitions/actor/: actor_definition.py  actor_type.py
prototype-system/definitions/rule/: rule_action.py  rule_condition.py  rule_condition_comparison_operator.py  rule_definition.py
prototype-system/definitions/sensor/: sensor_definition.py  sensor_type.py
prototype-system/network_interface/: network_interface.py  parser.py
prototype-system/rule_engine/: rule_engine.py
prototype-system/scheduler/: scheduler.py
prototype-system/sensor_actor_interace/: sensor_actor_interface.py
thesis/: commands.tex  literature.bib  thesis.tex
thesis/chapters/: 0-titlepage.tex  1-einleitung.tex  2-grundlagen.tex  3-analyse.tex  4-erhebung.tex  5-konzept.tex  6-implementierung.tex  7-evaluation.tex  8-zusammenfassung.tex
thesis/diagrams/: Grobes-Konzept-Allgemein.eps  Grobes-Konzept-Allgemein.tex  KofferKonzept.eps  KofferKonzept.tex
