[project]
# Support Python 3.11+.
name = "Prototype System"
requires-python = ">=3.11"
dependencies = [
    "gpiozero>=2.0.1",
    "requests>=2.32.3",
    "smbus2>=0.4.3",

]
authors = [
    {name = "Max Henning Junghans", email = "maxhenningjunghans@gmail.com"},
]
description = "A prototype system for the system part of my master thesis about Smart Gardening."
readme = "README.md"
keywords = [
    "prototype",
    "system",
    "master thesis",
    "thesis",
    "Raspberry Pi",
    "Smart Gardening",
]

[project.optional-dependencies]
tests = [
    "ruff",
]

[tool.ruff] # https://docs.astral.sh/ruff/settings/#top-level
line-length = 120 # https://docs.astral.sh/ruff/settings/#line-length
fix = false # https://docs.astral.sh/ruff/settings/#fix
show-fixes = true # https://docs.astral.sh/ruff/settings/#show-fixes
src = ["."] # https://docs.astral.sh/ruff/settings/#src

[tool.ruff.lint] # https://docs.astral.sh/ruff/settings/#lint
select = [# https://docs.astral.sh/ruff/settings/#select
    "A", # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ANN", # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ARG", # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "ASYNC", # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "BLE", # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "C4", # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C90", # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "COM", # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "DTZ", # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "EM", # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "ERA", # https://docs.astral.sh/ruff/rules/#eradicate-era
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FA", # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "FBT", # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
    "FURB", # https://docs.astral.sh/ruff/rules/#refurb-furb
    "G", # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "ICN", # https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
    "INP", # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
    "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "ICN", # https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
    "LOG", # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "FLY", # https://docs.astral.sh/ruff/rules/#flynt-fly
    "N", # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "NPY", # https://docs.astral.sh/ruff/rules/#numpy-specific-rules-npy
    "PD", # https://docs.astral.sh/ruff/rules/#pandas-vet-pd
    "PERF", # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PGH", # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PIE", # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PL", # https://docs.astral.sh/ruff/rules/#pylint-pl
    "PT", # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH", # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "PYI", # https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "Q", # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET", # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE", # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "S", # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF", # https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SLOT", # https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T10", # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "T20", # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "TCH", # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "TD", # https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "TID", # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TRY", # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "YTT",  # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]
ignore = [# https://docs.astral.sh/ruff/settings/#extend-ignore
    "ANN101", # https://docs.astral.sh/ruff/rules/missing-type-self/
#    "D203", # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/
#    "D204", # https://docs.astral.sh/ruff/rules/one-blank-line-after-class/
#    "D205", # https://docs.astral.sh/ruff/rules/blank-line-after-summary/
#    "D212", # https://docs.astral.sh/ruff/rules/multi-line-summary-first-line/
#    "D400", # https://docs.astral.sh/ruff/rules/ends-in-period/
#    "D401", # https://docs.astral.sh/ruff/rules/non-imperative-mood/
#    "D404", # https://docs.astral.sh/ruff/rules/docstring-starts-with-this/
#    "D415", # https://docs.astral.sh/ruff/rules/ends-in-punctuation/
#    "N801", # https://docs.astral.sh/ruff/rules/invalid-class-name/
#    "N999", # https://docs.astral.sh/ruff/rules/invalid-module-name/
]

[tool.ruff.lint.pycodestyle] # https://docs.astral.sh/ruff/settings/#lintpycodestyle
ignore-overlong-task-comments = true # https://docs.astral.sh/ruff/settings/#lint_pycodestyle_ignore-overlong-task-comments

[tool.ruff.lint.isort] # https://docs.astral.sh/ruff/settings/#lintisort
split-on-trailing-comma = false # https://docs.astral.sh/ruff/settings/#lint_isort_split-on-trailing-comma

[tool.ruff.lint.pylint] # https://docs.astral.sh/ruff/settings/#lintpylint

[tool.ruff.format] # https://docs.astral.sh/ruff/settings/#format
skip-magic-trailing-comma = true # https://docs.astral.sh/ruff/settings/#format_skip-magic-trailing-comma
